# rtd-calculator

./: pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yml  tests.yml
docs/: conf.py  index.rst  intro.rst  requirements.txt
docs/_templates/_autoapi_templates/python/: module.rst
rtd/calculator/: calculator.py  operations.py
tests/: test_calc.py
