[metadata]
name = rtd.calculator
description = A test calculator

[options]
zip_safe = false
packages = find_namespace:
namespace_packages = rtd
platforms = any
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    sphinx-copybutton
    sphinx-argparse-cli
    ipython == 8.0.1

[flake8]
max-line-length = 120
extend-ignore = E203
statistics = true
